# RTMPScreenRecoderPush

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/chenzhu/screencapture/mypush/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/administrator/mypush/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c  native-lib.cpp  packt.h
app/src/main/cpp/include/: x264.h  x264_config.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/chenzhu/screencapture/core/: AudioCodec.java  AudioSpecificConfig.java  IFrame.java  RtmpManager.java  VideoCodec.java
app/src/main/java/com/chenzhu/screencapture/mypush/: MainActivity.java
app/src/main/java/com/example/administrator/core/: Packager.java  RESCoreParameters.java
app/src/main/java/com/example/administrator/mypush/: AudioIntentService.java  MainActivity.java  RecoderIntentService.java  RtmpClient.java
app/src/main/java/com/example/administrator/rtmp/: FLvMetaData.java  RESFlvData.java
app/src/main/java/com/example/administrator/tools/: ByteArrayTools.java  LogTools.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/chenzhu/screencapture/mypush/: ExampleUnitTest.java
app/src/test/java/com/example/administrator/mypush/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
